# Othello

./: Board.cpp  Board.hpp  CMakeLists.txt  ComputerPlayerMover.cpp  Constants.hpp  Othello.kdev4  OthelloPoint.cpp  OthelloPoint.hpp  PersonPlayerMover.cpp  Player.cpp  Player.hpp  PlayerMover.hpp  main.cpp
